@@ -36,6 +36,8 @@ Changes from 4.1.3 to 4.1.4
 
 10. MinGW support has been updated.
 
+11. The -d option now allows -d- to print to standard output.
+
 Changes from 4.1.2 to 4.1.3
 ---------------------------
 
