@@ -14,7 +14,9 @@
 	Unrelated:
 
 	* symbol.c (get_symbols): Add FUNCTAB and SYMTAB to the list
-	for the -d option. Thanks to Hermann Peifer for the report.
+	for the -d option.
+	* awkgram.y (dump_vars): Allow "-" to mean print to stdout.
+	Thanks to Hermann Peifer for the reports.
 
 2016-06-26         Arnold D. Robbins     <arnold@skeeve.com>
 
